@@ -643,6 +643,9 @@ abstract class FacetFieldProcessorFCBase extends FacetFieldProcessor {
       }
     }
 
+    FacetDebugInfo fdebug = fcontext.getDebugInfo();
+    if (fdebug != null) fdebug.putInfoItem("numBuckets", new Long(numBuckets));
+    
     // if we are deep paging, we don't have to order the highest "offset" counts.
     int collectCount = Math.max(0, queue.size() - off);
     assert collectCount <= lim;
